--- a/popup.html
+++ b/popup.html
@@ -8,12 +8,13 @@
       <header class="gastracker_fancyfooter">
         <p><b>Donate,</b> <i>0x6F4C57911E2867caf57a1316b53A05a71a9F5818</i></p>
       <button class="gastracker_fancybutton" id="copy-button">Copy Address</button>
+      <button class="gastracker_fancybutton_settings" id="settings-button">Settings</button>
       </header>
     </div>
 
     <div id="chart">
       <div id="tradingview_7d2a3-wrapper" style="position: relative; box-sizing: content-box; font-family: -apple-system, BlinkMacSystemFont, 'Trebuchet MS', Roboto, Ubuntu, sans-serif; margin: 0px auto !important; padding: 0px !important; width: 770px; height: 560px;">
-        <iframe title="advanced chart TradingView widget" lang="en" id="tradingview_7d2a3" frameborder="0" allowtransparency="true" scrolling="no" allowfullscreen="true" src="https://s.tradingview.com/widgetembed/?hideideas=1&amp;overrides=%7B%7D&amp;enabled_features=%5B%5D&amp;disabled_features=%5B%5D&amp;locale=en#%7B%22symbol%22:%22BINANCE:BTCUSDT%22,%22frameElementId%22:%22tradingview_7d2a3%22,%22interval%22:%2230%22,%22allow_symbol_change%22:%221%22,%22save_image%22:%221%22,%22studies%22:%22MACD@tv-basicstudies%22,%22theme%22:%22Dark%22,%22style%22:%221%22,%22timezone%22:%22Etc/UTC%22,%22studies_overrides%22:%22%7B%7D%22,%22referral_id%22:%221645%22,%22utm_source%22:%22gidpkdpdnngpfohekcfkfjbkieeihekj%22,%22utm_medium%22:%22widget%22,%22utm_campaign%22:%22chart%22,%22utm_term%22:%22BINANCE:BTCUSDT%22,%22page-uri%22:%22__NHTTP__%22%7D" style="width: 100%; height: 100%; margin: 0px !important; padding: 0px !important;"></iframe>
+        <iframe title="advanced chart TradingView widget" lang="en" id="tradingview_7d2a3" frameborder="0" allowtransparency="true" scrolling="no" allowfullscreen="true" src="https://www.tradingview-widget.com/embed-widget/advanced-chart/?locale=en#%7B%22width%22%3A980%2C%22height%22%3A610%2C%22symbol%22%3A%22BINANCE%3AETHUSDT%22%2C%22timezone%22%3A%22Etc%2FUTC%22%2C%22theme%22%3A%22dark%22%2C%22style%22%3A%220%22%2C%22withdateranges%22%3Atrue%2C%22range%22%3A%221D%22%2C%22hide_side_toolbar%22%3Afalse%2C%22allow_symbol_change%22%3Atrue%2C%22calendar%22%3Afalse%2C%22show_popup_button%22%3Atrue%2C%22popup_width%22%3A%221000%22%2C%22popup_height%22%3A%22650%22%2C%22support_host%22%3A%22https%3A%2F%2Fwww.tradingview.com%22%2C%22utm_source%22%3A%22%22%2C%22utm_medium%22%3A%22widget_new%22%2C%22utm_campaign%22%3A%22advanced-chart%22%2C%22page-uri%22%3A%22__NHTTP__%22%7D" style="width: 100%; height: 100%; margin: 0px !important; padding: 0px !important;"></iframe>
       </div>  
     </div>
 
