--- a/settings.html
+++ b/settings.html
@@ -7,11 +7,10 @@
 </head>
 <body class="settings_gastracker_backgroundofbody">
     <link rel="stylesheet" href="settings.css">
+    <h1 id="setting_title_gastracker"> ETH Price Hunter Extension</h1>
     <h1 class="gear_emoji">⚙️</h1>
-
-    <p id="setting_title_gastracker">Settings</p>
     
-    <button class="gastracker_fancybutton" id="reset_gastracker">Reset</button>
+    <button class="gastracker_fancybutton" id="reset_gastracker">Reset Settings</button>
     <button class="gastracker_fancybutton" id="black_only_gastracker">Black only badge</button>
 
     <div>
@@ -31,7 +30,7 @@
     </div>
 
 
-    <p>Github: <a href="https://github.com/had2020/gas-tracker-extension-" class="fancy-link">https://github.com/had2020/gas-tracker-extension-</a></p>
+    <p>Github: <a href="https://github.com/had2020/ETH-Price-Hunter-Extension" class="fancy-link">https://github.com/had2020/ETH-Price-Hunter-Extension</a></p>
 
     <p class="gastracker_fancy_text" id="change-text"> Nothing to save... </p>
 
