added setting menu

--- a/settings.html
+++ b/settings.html
@@ -12,6 +12,7 @@
     
     <button class="gastracker_fancybutton" id="reset_gastracker">Reset Settings</button>
     <button class="gastracker_fancybutton" id="black_only_gastracker">Black only badge</button>
+    <button class="gastracker_fancybutton" id="hide_badge_gastracker">Hide badge</button>
 
     <div>
         <hr style="border-top: 1px solid #000;">
