--- a/settings.html
+++ b/settings.html
@@ -13,6 +13,7 @@
     <button class="gastracker_fancybutton" id="reset_gastracker">Reset Settings</button>
     <button class="gastracker_fancybutton" id="black_only_gastracker">Black only badge</button>
     <button class="gastracker_fancybutton" id="hide_badge_gastracker">Hide badge</button>
+    <button class="gastracker_fancybutton" id="reload_extension">Reload with New Settings</button>
 
     <div>
         <hr style="border-top: 1px solid #000;">
